--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -10,10 +10,28 @@ force_display = true
 style = 'yellow'
 
 [python]
-disabled = true
+disabled = false
 
 [battery]
 disabled = false
+full_symbol = '🔋 '
+charging_symbol = '⚡️ '
+discharging_symbol = '💀 '
+
+[[battery.display]]
+threshold = 20
+style = "bold red"
+
+[[battery.display]]
+threshold = 50
+style = "bold yellow"
 
 [lua]
 disabled = true
+
+[hostname]
+ssh_only = true
+ssh_symbol = '🌐 '
+format = '[$ssh_symbol](bold blue) on [$hostname](bold red) '
+trim_at = '.payoneer.com'
+disabled = false
