Updates .git files and kubectl.zsh

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 
 [user]
   name       = Itai Ganot
-  email      = lel@lel.bz
+  email      = itaigan@payoneer.com
 
 [checkout]
   defaultRemote = origin
