--- a/starship.toml
+++ b/starship.toml
@@ -11,7 +11,7 @@ force_display = true
 style = 'yellow'
 
 [python]
-disabled = false
+disabled = true
 python_binary = "python3"
 detect_extensions = ["py", "ipynb"]
 detect_files = [
@@ -41,9 +41,68 @@ style = "bold yellow"
 [lua]
 disabled = true
 
+[git_branch]
+disabled = false
+format = "on [$symbol$branch]($style) "
+symbol = " "
+style = "bold purple"
+
+[git_status]
+disabled = false
+format = '([\[$all_status$ahead_behind\]]($style) )'
+style = "bold red"
+conflicted = "🏳"
+ahead = "🏎💨"
+behind = "😰"
+diverged = "😵"
+up_to_date = "✓"
+untracked = "🤷"
+stashed = "📦"
+modified = "📝"
+staged = "[++($count)](green)"
+renamed = "👅"
+deleted = "🗑"
+
+[package]
+disabled = true
+format = "is [$symbol$version]($style) "
+symbol = "📦 "
+style = "208 bold"
+
+[helm]
+disabled = true
+format = "via [$symbol$version]($style) "
+symbol = "⎈ "
+style = "bold white"
+
+[nodejs]
+disabled = true
+format = "via [$symbol($version )]($style)"
+symbol = "💠 "
+style = "bold green"
+
+[terraform]
+disabled = true
+
+[cmd_duration]
+disabled = false
+min_time = 2_000
+format = "took [$duration]($style) "
+style = "bold yellow"
+
 [hostname]
 ssh_only = true
 ssh_symbol = '🌐 '
 format = '[$ssh_symbol](bold blue) on [$hostname](bold red) '
 trim_at = '.payoneer.com'
 disabled = false
+
+
+[c]
+disabled = true
+# Don't exec cc/gcc/clang to fetch version
+commands = [] # default is ["cc", "gcc", "clang", "zig cc"]
+# And/or make it very hard to trigger:
+detect_extensions = []
+detect_files = []
+detect_folders = []
