--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ zsh/zsh.d/personal*
 # Temporary files
 .tmp/
 temp/
+
+
+nvim/.config/configstore/
+nvim/.config/nvim/temp_backup/
+nvim/.config/tfenv/
+zsh/.zcompdump
+zsh/.zsh_sessions/
